# PhishGuard

./: .replit  README.md  app.py  phishing_dataset.csv  pyproject.toml  replit.md  requirements.txt  train_screenshot_model.py  train_url_model.py  utils.py
attached_assets/: Pasted-I-want-to-build-a-complete-phishing-detection-web-application-called-PhishGuard-from-scratch-on-Repl-1756610599552_1756610599553.txt
ml_model/: train_model.ipynb
models/: cnn_screenshot_model.h5  random_forest_model.pkl
static/css/: style.css
static/js/: script.js
templates/: index.html
